<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="add_button">Add</string>
    <string name="go_to_google_button">Google</string>
    <string name="google_url">http://www.google.com</string>
    <string name="show_activity">Show Activity</string>
    <string name="second_activity">Second Activity</string>

</resources>
